Changuing and fixing bugs

--- a/Product management/frontend/src/System/Views/Products/Index.cshtml
+++ b/Product management/frontend/src/System/Views/Products/Index.cshtml
@@ -8,15 +8,15 @@
         <tr>
             <th scope="col">ID</th>
             <th scope="col"><i class="fa-solid fa-tag"></i> Product</th>
-            <th scope="col"><i class="fa-solid fa-calendar"></i> Date</th>
             <th scope="col"><i class="fa-solid fa-chart-simple"></i>  Situation</th>
             <th scope="col"><i class="fa-solid fa-plus"></i> Quantity</th>
             <th scope="col"><i class="fas fa-coins"></i> Currency Code</th>
             <th scope="col"><i class="fa-solid fa-dollar-sign"></i> Price</th>
             <th scope="col"><i class="fa-solid fa-user"></i> User</th>
+            <th scope="col"><i class="fa-solid fa-calendar"></i> Date</th>
         </tr>
     </thead>
-
+    <div id="liveAlertPlaceholder"></div>
     <tbody>
         <tr class="fadeIn">
             <th scope="row"></th>
