--- a/Product managment/frontend/src/System/Views/Products/Index.cshtml
+++ b/Product managment/frontend/src/System/Views/Products/Index.cshtml
@@ -4,8 +4,8 @@
     <div id="liveAlertPlaceholder"></div>
     <div id="alert-container"></div>
     <p id="noProductsMessage">You have not registered any products yet.</p>
-<div class="table-responsive">
-<table id="dataTable" class="table table-dark table-striped rounded-table">
+<div id ="table-teste" class="table-responsive">
+<table id="dataTable" class="table table-dark rounded-table">
     <thead class="thead">
         <tr>
             <th scope="col">ID</th>
@@ -19,15 +19,6 @@
         </tr>
     </thead>
     <tbody>
-        <tr class="fadeIn">
-            <th scope="row"></th>
-        </tr>
-        <tr class="fadeIn">
-            <th scope="row"></th>
-        </tr>
-        <tr class="fadeIn">
-            <th scope="row"></th>
-        </tr>
     </tbody>
 </table>
 </div>
